# TFG-telematica-etse-uv

./: LICENSE  README.md
Agente/: AGENTS.md  agent.py  bot.py  botutils.py  pyproject.toml
Agente/router/: __init__.py  config.py  fallback.py  metrics.py
Agente/skills/auditoria-seguridad-completa/: SKILL.md
Agente/skills/triage-ip-sospechosa/: SKILL.md
Agente/tools/: __init__.py  _common.py  actions.py  delivery.py  diagrams.py  mcp_setup.py  pentesting.py  routing.py  security.py  sysadmin.py
resultados_cap6/: README.md
resultados_cap6/nuvol-cpu/: README.md  RUN_METADATA.json  SUMMARY.md
resultados_cap6/nuvol-cpu/T1_banco/: banco_summary.csv
resultados_cap6/nuvol-cpu/T6_hardware/: t6_summary.csv  t6_summary.md
resultados_cap6/nuvol-cpu/T7_colas/: colas_summary.csv  mm1_local.csv  predicho_vs_medido.csv  t7_summary.md
resultados_cap6/nuvol-igpu-780m/: README.md  RUN_METADATA.json  SUMMARY.md
resultados_cap6/nuvol-igpu-780m/T1_banco/: banco_summary.csv
resultados_cap6/nuvol-igpu-780m/T2_calidad/: judge_packet.md  judge_prompt.txt  t2_local_vs_nube.csv  t2_scores.md  t2_scores_perfil.csv  t2_scores_ruta.csv
resultados_cap6/nuvol-igpu-780m/T3_privacidad/: t3_summary.md
resultados_cap6/nuvol-igpu-780m/T4_fallback/: t4_summary.md
resultados_cap6/nuvol-igpu-780m/T5_perfiles/: perfiles_summary.csv
resultados_cap6/nuvol-igpu-780m/T6_hardware/: t6_summary.csv  t6_summary.md
resultados_cap6/nuvol-igpu-780m/T7_colas/: colas_summary.csv  mm1_local.csv  predicho_vs_medido.csv  t7_summary.md
resultados_cap6/nuvol-igpu-780m/T8_inyeccion/: t8_summary.md
resultados_cap6/nuvol-igpu-780m/T9_anunciado_vs_real/: coste_sombra_modelo.csv  coste_sombra_turno.csv  t9_summary.md  (+1 more)
resultados_cap6/rtx5060ti/: README.md  RUN_METADATA.json  SUMMARY.md
(+7 files in other folders)
